...
        }
        
        //Fill in the cells of the tableView
        setUpUI()
        
        //Accessibility
        tableView.accessibilityIdentifier = "recipeTableView"
        
        
    }
    
    //TODO: Create popup and have error sent to remote database for tracking
    /**
...
