...
     Main Function: Source the name and meal ids that are used to populate the `RecipeTableView`
     
     Calls on the API endpoint [https://www.themealdb.com/api/json/v1/1/filter.php?c=Dessert] that returns a JSON list of all
     recipes inside of the dessertCategory. Each objects in the JSON contains a strMeal (the reccipe's name), a strMealThumb (A recipe's thumbnail).
     and a idMeal (A meal id), here is an example of how one object would look:
     
     ["Meals": [{"strMeal":"Apam balik","strMealThumb":"https:\/\/www.themealdb.com\/images\/media\/meals\/adxcbq1619787919.jpg","idMeal":"53049"},  ... }]
     
     This method takes this response and decodes it into two structs defined in `RecipeStruct`. `ShortHandResponse` captures the overall "Meals" array which
     is filled with the `Meal` struct which captures the strMeal and idMeal from the JSON. Once the JSON has been decoded it becomes a dictionary of strMeals and idMeals.
     Example of how it looks:
     
     [(strMeal: "Apam balik", idMeal: "53049"), ...]
...
